# HideBackgrounds

./: README.md  applybgs.sh  getlocalbgs.sh  meson.build
backgrounds/: arnauld.xml.in  bridge.xml.in  church.xml.in  dario.xml.in  francesco.xml.in  graeme.xml.in  island.xml.in  largecity.xml.in  meson.build  mountains.xml.in  nature.xml.in  skyline.xml.in  starstimelaps.xml.in  waterfalls.xml.in
gnome-background-properties/: adwaita.xml  winter.xml
